<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">ComicApp</string>
    <string name="app_id">1457084914512781</string>
    <string name="arabic">Arabic</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="icanlogin">Can\'t LOGIN</string>
    <string name="register"> REGISTER </string>
    <string name="now">now</string>
    <string name="free">FREE</string>
    <string name="pay">PAY</string>
    <string name="top">TOP</string>
    <string name="comic_new">NEW</string>
    <string name="arabicenglishcomic">ARABIC/ENGLISH COMIC</string>
    <string name="readercomic">READER COMIC</string>
    <string name="read">Read</string>
    <string name="search">Search</string>
    <string name="setting">SETTING</string>
    <string name="fullname">Full name</string>
    <string name="membersince">Member since</string>
    <string name="download">Download</string>
    <string name="post">Post</string>
    <string name="allusers">ALL USERS</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="waitingdownload">Waiting to download</string>
    <string name="title">Title</string>
     <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="description">Description</string>
    <string name="target">Target</string>
    <string name="prices">Prices</string>
    <string name="ar_loading_comic"> تحميل القصة </string>
    <string name="ar_action_settings">الأعدادت</string>
    <string name="ar_login">دخول</string>
    <string name="ar_cancel">إلغاء</string>
    <string name="ar_username">اسم المستخدم</string>
    <string name="ar_email">البريد الالكتروني</string>
    <string name="ar_password">كلمة المرور</string>
    <string name="ar_icanlogin">ا استطيع الدخول</string>
    <string name="ar_register">سجل</string>
    <string name="ar_free">مجاناَ</string>
    <string name="ar_pay">مدفوع</string>
    <string name="ar_top">أعلى تقييم</string>
    <string name="ar_comic_new">جديد</string>
    <string name="ar_arabicenglishcomic">قصص بالعربي/قصص بالإنجليزية</string>
    <string name="ar_readercomic">قصص الأعضاء</string>
    <string name="ar_read">إقرأ</string>
    <string name="ar_search">بحث</string>
    <string name="ar_setting">الأعدادات</string>
    <string name="ar_fullname">الأسم الكامل</string>
    <string name="ar_membersince">تاريخ العضوية</string>
    <string name="ar_download">تنزيل</string>
    <string name="ar_post">تعليق</string>
    <string name="ar_allusers">ALL USERS</string>
    <string name="ar_notification">إشعار</string>
    <string name="ar_waitingdownload">أنتظر التنزيل</string>
    <string name="ar_title">عنوان القصة</string>
    <string name="ar_description">وصف القصة</string>
    <string name="ar_target">القصة تستهدف</string>
    <string name="ar_prices">السعر</string>
    <string name="ar_arabic">عربي</string>
    <string name="ar_email">البريد الالكتروني</string>
    <string name="ar_please_try_again">حاول مجدداً</string>
    <string name="ar_ok">تم</string>
    <string name="ar_please_wait">رجاً الأنتظار</string>
    <string name="ar_getting_access_token">جاري الحصول على الأرتباط</string>
    <string name="ar_cancel">إلغاء</string>
    <string name="ar_register">تسجيل</string>
    <string name="ar_lanuage">اللغة</string>
    <string name="ar_notification">إشعار</string>
    <string name="ar_all_users">الأعضاء</string>
    <string name="ar_read">اقرأ</string>
    <string name="ar_plaese_choose_avartar"> رجاءً أختار صورة رمزية</string>
    <string name="ar_member_of_comic">قصص الأعضاء</string>
    <string name="ar_post">تعليق</string>
    <string name="ar_information_book_had_uploaded_success_lease">معلومات القصة رفعت بنجاح .رجاءً حمل الصور</string>
    <string name="ar_no_connect_internet">لايوجد أتصال بالشبكة</string>
    <string name="ar_plaese_check_your_internet_connecttion">رجاءً تأكد من الأتصال بالشبكة</string>
    <string name="ar_succefully">نجحت</string>
    <string name="ar_book_have_been_uploaded">تم رفع القصة</string>
    <string name="ar_do_you_want_rating_this_book">هل تود تفضيل القصة</string>
    <string name="ar_not_empty">رجاًء ملأ البيانات</string>
    <string name="ar_login_fail">فشل في تسجيل الدخول</string>
    <string name="ar_loading">تحميل</string>
    <string name="ar_register_fail">التسجيل فشل</string>
    <string name="ar_information">معلومات</string>
    <string name="ar_error">خطأ</string>
    <string name="ar_english">الإنجليزية</string>
    <string name="ar_done">تم</string>
    <string name="ar_edit">تعديل</string>
    <string name="ar_now">الآن</string>
    <string name="ar_off">الغاء</string>
    <string name="ar_on">تشغيل</string>
    <string name="ar_new_book">هناك قصه جديده في المتج</string>
    <string name="ar_email_format_is_invalid">صيغة البريد الالكتروني خاطئة</string>
    <string name="ar_comicapp">قصص براءة</string>
    <string name="ar_can_not_login">لا تستطيع الدخول</string>
    <string name="ar_success">نجحت</string>
    <string name="ar_loading_comic">تحميل القصة</string>
    <string name="ar_waiting_down">أنتظر التنزيل</string>
    <string name="ar_upload_the_information_book_failed_please_try_again">فشل في رفع معلومات القصة .رجاً حاول مجدداَ</string>
    <string name="ar_information_book_had_uploaded_success">رجا الدخول للصفحة</string>
    <string name="ar_upload_images_erorr_please_try_again">خطأ في رفع الصور .رجاً حاول مجدداَ</string>
    <string name="ar_successfullb_book_have_been_uploaded">القصة رفعت بنجاح</string>
    <string name="ar_comment">علق هنا</string>
    <string name="instagram_id">cc987e76ae8b4c40b265fe4af3a85592</string>
    <string name="instagram_secret">53e634dd38394402ba47bd223951a919</string>
    <string name="callbackurl">instagram://connect</string>
    
    
</resources>
