<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F879A4" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:text="@string/cancel"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnLogo"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/main_logo" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <LinearLayout
                android:id="@+id/layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/email_background"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingRight="55dp" >

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/password_background"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingRight="55dp" >

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center_vertical|left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:text="@string/login"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtRegister1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icanlogin"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnRegister"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/register"
                android:textColor="#FA9DBC" />

            <TextView
                android:id="@+id/txtRegister2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>